--- a/index.html
+++ b/index.html
@@ -29,14 +29,17 @@
           <option value="triad">Triad</option>
           <option value="quad">Quad</option>
         </select>
-        <button type="submit">Get color scheme</button>
+        <button type="submit">Generate</button>
       </form>
     </header>
     <main class="color__info" id="color__grid"></main>
     <footer>
       <p>
-        Copyright 2023
-        <a href="http://" target="_blank" rel="noopener noreferrer"
+        © Copyright 2023 - Developed by
+        <a
+          href="https://github.com/Nessvah"
+          target="_blank"
+          rel="noopener noreferrer"
           >Sílvia Vanessa</a
         >
       </p>
