--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <select name="mode" id="mode">
           <option value="monochrome" selected>Monochrome</option>
           <option value="monochrome-dark">Monochrome-Dark</option>
-          <option value="monochrome-lighT">Monochrome-Light</option>
+          <option value="monochrome-light">Monochrome-Light</option>
           <option value="analogic">Analogic</option>
           <option value="complement">Complement</option>
           <option value="analogic-complement">Analogic-Complement</option>
